--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "module": "ESNext",
         "outDir": "build/",
         "rootDir": "src/",
-        "baseUrl": "."
+        "baseUrl": ".",
+        "moduleResolution": "Node"
     }
 }
