npm: install dotenv

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "author": "Hnatkovskyi Oleh",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^16.0.0",
         "grammy": "^1.7.3"
+    },
+    "devDependencies": {
+        "@types/node": "^17.0.24"
     }
 }
