--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "worlde",
     "version": "1.0.0",
     "description": "Bot for Telegram which lets you play Wordle game",
+    "type": "module",
     "scripts": {
         "build": "tsc",
         "start": "node .\\build\\bot.js"
@@ -13,6 +14,7 @@
         "grammy": "^1.7.3"
     },
     "devDependencies": {
-        "@types/node": "^17.0.24"
+        "@types/node": "^17.0.24",
+        "@types/node-fetch": "^2.6.1"
     }
 }
