--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "license": "ISC",
     "dependencies": {
         "dotenv": "^16.0.0",
-        "grammy": "^1.7.3"
+        "grammy": "^1.7.3",
+        "wordnet": "^2.0.0"
     },
     "devDependencies": {
         "@types/node": "^17.0.24",
